--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nebular/auth": "2.0.0-rc.4",
     "@nebular/theme": "2.0.0-rc.4",
     "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.8",
+    "@turf/helpers": "^6.1.4",
     "@types/lodash": "^4.14.95",
     "@types/lokijs": "^1.5.1",
     "@types/pouchdb": "^6.3.2",
@@ -48,6 +49,7 @@
     "ionicons": "2.0.1",
     "lodash": "^4.17.4",
     "lokijs": "^1.5.5",
+    "mapbox-gl": "^0.47.0",
     "moment": "^2.22.2",
     "nebular-icons": "1.0.6",
     "ng2-smart-table": "1.3.5",
@@ -57,6 +59,7 @@
     "pouchdb-find": "^6.4.3",
     "pouchdb-quick-search": "*",
     "pouchdb-upsert": "^2.2.0",
+    "randomcolor": "^0.5.3",
     "roboto-fontface": "0.8.0",
     "rxjs": "^6.2.2",
     "rxjs-compat": "^6.2.2",
@@ -71,6 +74,7 @@
     "@compodoc/compodoc": "1.0.1",
     "@types/jasmine": "2.5.54",
     "@types/jasminewd2": "2.0.3",
+    "@types/mapbox-gl": "^0.47.0",
     "@types/node": "6.0.90",
     "@types/pouchdb-find": "^6.3.2",
     "codelyzer": "4.0.2",
